--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/springApplication
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.username=root
+spring.datasource.password=
